Change-Id: I62d527a82e232cf58bf4064b95ac8889174f8803 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -45,7 +45,11 @@
 					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
 					  success: function($m) { 
 						  alert ("ok"); 
-					  }  ,
+					  },
+					  error: function(jqXHR, textStatus, errorThrown) {
+						  alert ("ok"); 
+					  }
+					  
 					});
 			} else {
 				// Sessions
@@ -56,6 +60,9 @@
 					  success: function($m) { 
 						  alert ("ok"); 
 					  }  ,
+					  error: function(jqXHR, textStatus, errorThrown) {
+						  alert ("ok"); 
+					  }
 				});
 			}
 			return true;
