--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -7,31 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script data-main="scripts/index/index" src="scripts/require-jquery.js"></script>
-	
-	<script type="text/javascript">
-	$(document).ready(function() {
-		$.getJSON('index/list', function(data) {
-			  var items = [];
-			  
-			  $.each(data, function(key, val) {
-				  
-				Date.parse(val.date)
-				Date.p
-			    d = new Date(val.date);
-				     
-				if (val.type != "sessions") { 
-			    	items.push('<li data-theme="b"><a href="index.html" >' + d.toLocaleDateString() + '</a></li>');
-				} else {
-			    	items.push('<li data-theme="c"><a href="index.html" >' + d.toLocaleDateString() + '</a></li>');
-				}
-			  });
-  			  $("#mainList").append(items.join(''));
-			  $('#mainList').listview('refresh');
-			});
-	});
-	</script>
-	
+	<script data-main="scripts/index/index" src="scripts/require.js"></script>	
 </head> 
 <body> 
 <div data-role="page">
