--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -7,68 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script type="text/javascript">
-	function getSelected(options) {
-		for ( var i = 0; i < options.length; i++) {
-			var e = options[i];
-			if (e.selected) {
-				return e.value;
-			}
-		}
-	}
-
-	$(document).ready(function() {
-
-		$(document).bind("mobileinit", function(){
-			  $.mobile.ajaxEnabled = false;
-		});
-		
-		var d = new Date();
-		$('#select-choice-month').children()[d.getMonth()+1].selected=true;
-		$('#select-choice-day').children()[d.getDate()].selected=true;
-		$('#select-choice-year').children()[d.getFullYear() - 2011].selected=true;
-		$('#select-choice-month').selectmenu('refresh');
-		$('#select-choice-day').selectmenu('refresh');
-		$('#select-choice-year').selectmenu('refresh');
-
-		$( "#save-btn" ).bind( "click", function(event, ui) {
-			y = getSelected($('#select-choice-year').children());
-			m = getSelected($('#select-choice-month').children());
-			d = getSelected($('#select-choice-day').children());
-			c = $('#comments').value;
-			
-			if ($("#radio-choice-1").checked == "checked") {
-				// Shift
-				$.ajax({
-					  type: 'POST',
-					  url: '<?= $this->url(array('controller'=>'index', 'action' => 'reportshift'))?>',
-					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function(m) { 
-						  alert (m);
-					  },
-					  error: function(jqXHR, textStatus, errorThrown) {
-						  alert (textStatus);
-						  
-					  }
-					  
-					});
-			} else {
-				// Sessions
-				$.ajax({
-					  type: 'POST',
-					  url: '<?= $this->url(array('controller'=>'index', 'action' => 'reportsession'))?>',
-					  data: { 'm': m, 'd' : d , 'y' : y, 'c' : c },
-					  success: function(m) { 
-					  }  ,
-					  error: function(jqXHR, textStatus, errorThrown) {
-					  }
-				});
-			}
-			return true;
-		});
-	});
-	</script>
-	
+	<script data-main="scripts/index/insert" src="scripts/require.js"></script>	
 </head> 
 <body> 
 <div data-role="page">
