Change-Id: If09ab9485d532ea78ec98f747bac0a36e4d54d7a Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script data-main="scripts/index/insert" src="<?php $this->url("scripts/require.js") ?> "></script>	
+	<script data-main="scripts/index/insert" src="<?= $this->url() ?>/scripts/require.js"></script>	
 </head> 
 <body> 
 <div data-role="page">
