Change-Id: Ibfa8e608c3a74395bd7c6469b5fe0d8c2edab049 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 	<script src="<?= $this->baseUrl() ?>/scripts/require.js"></script>
 	<script>
-	    require(["<?= $this->baseUrl() ?>", "scripts/index/insert"], function(someModule) {
+	    require(["<?= $this->baseUrl() ?>", "/scripts/index/insert"], function(someModule) {
 	    });
 	</script>
 </head> 
