Change-Id: I82969533438171f57bf19805b3d70520c9d3493e Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/insert.phtml
+++ b/application/views/scripts/index/insert.phtml
@@ -7,7 +7,14 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-	<script data-main="<?= $this->baseUrl() ?>/scripts/index/insert" src="<?= $this->baseUrl() ?>/scripts/require.js"></script>
+	<script type="text/javascript" src="<?= $this->baseUrl() ?>/scripts/require.js"></script>
+	<script type="text/javascript">
+	  require.config({
+	    baseUrl: "<?= $this->baseUrl() ?>",
+	  });
+	  require( ["scripts/index/insert"]);
+	</script>
+	
 </head> 
 <body> 
 <div data-role="page">
