--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -19,16 +19,16 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="index/" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->view->month -1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
 		<h1></h1>
-		<a href="index/" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->view->month +1)))?> data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
 		<div class="ui-grid-a">
 			<div class="ui-block-a"></div>
 			<div class="ui-block-b"><a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert'))?>/" data-role="button" data-icon="plus" rel="external">Report</a></div>
-		</div><!-- /grid-b -->	
+		</div><!-- /grid-a -->	
 	</div><!-- /content -->
 
 	<div data-role="content">	
