--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -19,9 +19,9 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->view->month -1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->month -1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
 		<h1></h1>
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->view->month +1)))?> data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($this->month +1)))?> data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
