--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -19,9 +19,10 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ((int) $this->month - 1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
+		<?php $m = (int) $this->month; ?>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($m = 1 ? 12 : $m - 1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
 		<h1></h1>
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ((int) $this->month + 1)))?>" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'insert', "month" => ($m = 12 ? 1 : $m + 1)))?>" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
 	<div data-role="content">	
