--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -21,7 +21,7 @@
 	<div data-role="header" data-position="inline">
 		<?php $m = (int) $this->month; ?>
 		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index', "month" => ($m == 1 ? 12 : $m - 1)))?>" data-icon="arrow-l" class="ui-btn-left">Previous Month</a>
-		<h1></h1>
+		<div id="month"><?= $m ?></div>
 		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index', "month" => ($m == 12 ? 1 : $m + 1)))?>" data-icon="arrow-r" data-iconpos="right" class="ui-btn-right">Next Month</a>
 	</div>
 	
