--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,7 @@
 	  require.config({
 	    baseUrl: "<?= $this->baseUrl() ?>",
 	  });
-	  require( ["scripts/index/index", "scripts/moment.min.js"]);
+	  require( ["scripts/index/index", "scripts/moment"]);
 	</script>
 </head> 
 <body> 
