Change-Id: Ibd7cd331b5e4376f9ba76e3422c8db66bca2729e Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/update.phtml
+++ b/application/views/scripts/index/update.phtml
@@ -94,7 +94,7 @@
 				<input type="text" name="comments" id="comments" value="" placeholder="Comments"/>
 			</div>
 
-			<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" id="delete-btn" data-icon="delete" data-theme="e" rel="external">Delete</a>
+			<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" data-role="button" id="delete-btn" data-icon="delete" data-theme="e" rel="external">Delete</a>
 		</form>
 	
 	</div><!-- /content -->
