--- a/application/views/scripts/index/update.phtml
+++ b/application/views/scripts/index/update.phtml
@@ -12,7 +12,7 @@
 	  require.config({
 	    baseUrl: "<?= $this->baseUrl() ?>",
 	  });
-	  require( ["scripts/index/update"]);
+	  require( ["scripts/index/update", "scripts/url"]);
 	</script>
 	
 </head> 
@@ -28,67 +28,6 @@
 	<div data-role="content">
 		<form id="event-form">
 
-			<fieldset data-role="controlgroup" data-type="horizontal"> 
-			
-				<select name="select-choice-month" id="select-choice-month">
-					<option>Month</option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-					<option value="7">7</option>
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
-					<option value="11">11</option>
-					<option value="12">12</option>
-				</select>
-				
-				<select name="select-choice-day" id="select-choice-day">
-					<option>Day</option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-					<option value="7">7</option>
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
-					<option value="11">11</option>
-					<option value="12">12</option>
-					<option value="13">13</option>
-					<option value="14">14</option>
-					<option value="15">15</option>
-					<option value="16">16</option>
-					<option value="17">17</option>
-					<option value="18">18</option>
-					<option value="19">19</option>
-					<option value="20">20</option>
-					<option value="21">21</option>
-					<option value="22">22</option>
-					<option value="23">23</option>
-					<option value="24">24</option>
-					<option value="25">25</option>
-					<option value="26">26</option>
-					<option value="27">27</option>
-					<option value="28">28</option>
-					<option value="29">29</option>
-					<option value="30">30</option>
-					<option value="31">31</option>
-				</select>
-				
-				<select name="select-choice-year" id="select-choice-year">
-					<option>Year</option>
-					<option value="2012">2012</option>
-					<option value="2013">2013</option>
-					<option value="2014">2014</option>
-				</select>
-			</fieldset>		
-			
 			<div data-role="fieldcontain" class="ui-hide-label">
 				<label for="username">Comments:</label>
 				<input type="text" name="comments" id="comments" value="" placeholder="Comments"/>
