Change-Id: I6cc73a252bde478fb649c992aeab9aec2c2d97c7 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/update.phtml
+++ b/application/views/scripts/index/update.phtml
@@ -12,7 +12,7 @@
 	  require.config({
 	    baseUrl: "<?= $this->baseUrl() ?>",
 	  });
-	  require( ["scripts/index/update", "scripts/url"]);
+	  require( ["scripts/url", "scripts/index/update"]);
 	</script>
 	
 </head> 
