Change-Id: Ibfe53345734c5de997ddfff57b0b9c146302114f Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -12,7 +12,7 @@
 	  require.config({
 	    baseUrl: "<?= $this->baseUrl() ?>",
 	  });
-	  require( ["scripts/index/index", "scripts/moment", "scripts/libs/base64.js", "scripts/libs/sprintf.js", "scripts/jspdf.js"]);
+	  require( ["scripts/libs/base64.js", "scripts/libs/sprintf.js", "scripts/jspdf.js", "scripts/index/index", "scripts/moment"]);
 	</script>
 </head>
 <body> 
