Change-Id: Ia12f7c9303b5245fe69dc93755c2d1a0c69443d7 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/update.phtml
+++ b/application/views/scripts/index/update.phtml
@@ -20,9 +20,9 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" data-icon="delete" rel="external">Cancel</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'), null, true)?>" data-icon="delete" rel="external">Cancel</a>
 		<h1>Update</h1>
-		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'))?>" id="save-btn" data-icon="check" data-theme="b" rel="external">Save</a>
+		<a href="<?= $this->url(array('controller'=>'index', 'action' => 'index'), null, true)?>" id="save-btn" data-icon="check" data-theme="b" rel="external">Save</a>
 	</div>
 	
 	<div data-role="content">
