Change-Id: I1717231492c5a907876051a5d2a2a0e0a98b54c7 Signed-off-by: royganor <roy@zend.com>

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -16,6 +16,33 @@
 	</script>
 </head>
 <body> 
+<div id="fb-root"></div>
+<script>
+  (function() {
+    var e = document.createElement('script'); e.async = true;
+        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+        document.getElementById('fb-root').appendChild(e);
+        }());
+
+  window.fbAsyncInit = function() {
+	    FB.init({ appId: '329484390424505', 
+	      status: true, 
+	      cookie: true,
+	      xfbml: true,
+	      oauth: true});
+
+	      FB.Event.subscribe('auth.authResponseChange', handleResponseChange);  
+	    };
+
+    function handleResponseChange(response) {
+    	   document.body.className = response.authResponse ? 'connected' : 'not_connected';
+
+    	   if (response.authResponse) {
+    	     console.log(response);
+    	   }
+	}
+</script>
+
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
@@ -38,8 +65,11 @@
 		</ul>
 	</div><!-- /content -->
 
+	<div data-role="footer" class="ui-bar">
+		<a href="index.html" data-role="button" id="login-btn" data-icon="plus">Login</a>
+		<a href="index.html" data-role="button" id="logout-btn" data-icon="delete">Logout</a>
+	</div>
 </div><!-- /page -->
-
 </body>
 </html>
 
